[package]
name = "vibe-bomparty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "1.0.1"
log = "0.4"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
